# lourdesproyecto

./: .gitignore  ANALISIS_MEJORAS_CODIGO.md  ANALISIS_MEJORAS_CONVERTIDOR.md  APA7_CRITIQUE_REPORT.md  CAMBIOS_FORMATO.md  CHANGELOG.md  DOCUMENTACION_CONVERTIDOR_APA7.md  EMPIEZA_AQUI.md  FINAL_DOCUMENT_SUMMARY.md  GUIA_COMPLETA_FORMATO_APA7_WORD.md  GUIA_FINAL.md  IMPLEMENTATION_COMPLETE.md  INFORME_CORRECCION_FORMATO.md  INSTRUCCIONES_USO.md  PASOS_SIGUIENTES.txt  PROYECTO_FINAL_APA7.docx  PROYECTO_FINAL_COMPLETO.docx  PROYECTO_FINAL_CONSOLIDADO.md  PROYECTO_FINAL_INVESTIGACION.md  PROYECTO_FINAL_INVESTIGACION_APA7.docx  PROYECTO_FINAL_INVESTIGACION_APA7_CORRECTED.docx  PROYECTO_FINAL_INVESTIGACION_APA7_FINAL.docx  PROYECTO_METADATA.txt  README.md  README_PROYECTO_COMPLETO.md  RESUMEN_EJECUTIVO_FINAL.md  RESUMEN_ENTREGA.txt  RESUMEN_REFACTORIZACION.md  RESUMEN_TRABAJO_COMPLETO.md  RESUMEN_TRANSFORMACION_APA7.md  START_HERE.md  TESIS_ANALYSIS_REPORT.md  TESIS_COMPLETA_APA7.docx  TESTING_COMPLETE.md  TRABAJO_COMPLETADO.md  VALIDATION_AND_CRITIQUE.md  analyze_apa7_compliance.py  analyze_tesis_docx.py  apply_apa7_corrections.py  convertidor_apa7_completo.py  (+12 more)
.claude/: settings.local.json
Original/: DEVOLUCIONES Y SUGERENCIAS_DEL ANTEPROYECTO - copia.docx  MODELO DE PROYECTO_psicohigiene 2025.docx  Puntos a corregir o verificar_entre las chica.docx
Tarea/: 00_CHECKLIST_COMPLETO_DEL_PROYECTO.md  01_MODELO_DE_PROYECTO_psicohigiene_2025.md  02_DEVOLUCIONES_Y_SUGERENCIAS.md  03_PUNTOS_A_CORREGIR_asignaciones.md  PLANTILLA_Consentimiento_Informado.md  PLANTILLA_Entrevista_Padres.md  PLANTILLA_Protocolo_Confidencialidad.md  PLANTILLA_Registro_de_Sesiones.md  README_INSTRUCCIONES.md
archivo_versiones_antiguas/: PROYECTO_FINAL_PROFESIONAL.docx  crear_docx_mejorado.py
config/: apa7_professional.yaml  apa7_student.yaml
docs/examples/: basic_usage.py
guia_apa7/: ESTRUCTURA_VISUAL.md  MEJORAS_IMPLEMENTADAS.md  README.md
guia_apa7/referencias_rapidas/: 01_inicio_rapido.md  02_cheat_sheet.md  03_buscador_formatos.md  04_atajos_teclado.md  06_diagrama_estructura.md
proyecto_secciones/: 00_portada.md  01_indice.md  02_resumen.md  03_palabras_clave.md  04_introduccion.md  05_politicas_institucionales.md  06_fundamentacion_teorica.md  07_planteamiento_problema.md  08_hipotesis.md  09_objetivos.md  10_variables.md  11_metodologia.md  12_estrategia_implementacion.md  13_descripcion_sesiones.md  14_cronograma.md  15_presupuesto.md  16_aspectos_eticos.md  17_analisis_datos.md  18_resultados_esperados.md  19_limitaciones.md  20_aportes.md  21_referencias.md  22_anexos.md  README.md  consolidar.py  dividir_proyecto.py  extraer_secciones.py
src/: __init__.py  cli.py
src/config/: __init__.py  apa7_config.py
src/core/: __init__.py  converter.py
tests/: __init__.py  test_parsers.py  test_styles.py
tests/fixtures/: sample_simple.md  (+1 more)
(+12 files in other folders)
